agrego ej generics